# openorbit

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.org  COPYING.txt  Doxyfile  HACKING.org  HACKING.txt  INSTALL.txt  Open Orbit copy-Info.plist  Open Orbit-Info.plist  PUBLICAPI  README.org  README.txt  TODO  configure  index.html  openorbit.xcconfig
cmake/: AddCMakeList.txt  Autowrap.cmake  Bison.txt  Flex.txt  InstallMacRes.txt  MacOSXBundleInfo.plist.in  Pyrex.txt  arch-flags.cmake  ibtool.cmake  mac-bundle-rsrc.cmake  shader.cmake  spacecraft.cmake  swig.cmake
docs/: CMakeLists.txt  Hrml Manual  Math and Physics.txt  Simulation Design  io-system.txt
include/: CMakeLists.txt
lib/: CMakeLists.txt
lib/auload/: pcm.c  (+4 more)
lib/imgload/: CMakeLists.txt  image.c  jpg.c  jpg.h  pngfile.c  pngfile.h  tga.c  tga.h
lib/vmath/: CMakeLists.txt  lwcoord.c  vmath-geo.c  vmath-matvec.c  vmath-quaternions.c
lib/vmath/arch/x86/: vmath-matvec-sse4.inl
openorbit.xcworkspace/: contents.xcworkspacedata
orbit.xcodeproj/: project.pbxproj
rsrc/: CMakeLIsts.txt  default-conf.json
scripts/: CMakeLists.txt  hip-filter.py  init.py  install-mac-res.sh  postinit.py
src/: CMakeLists.txt  config.h.in  error.c  error.h  io-manager.c  io-manager.h  log.c  log.h  main.c  menu-manager.h  object-graph.c  object-graph.h  plugin-handler.c  plugin-handler.h  res-manager.h  settings.c  settings.h  sim.c  sim.h  startup.c  terminal.c  terminal.h
src/avionics/: flightrecorder.c  flightrecorder.h
src/common/: bitutils.h  lwcoord.c  lwcoord.h  mapped-file.c  mapped-file.h  moduleinit.c  moduleinit.h  monotonic-time.c  monotonic-time.h  palloc.c  palloc.h  stringextras.c  stringextras.h
src/geo/: ellipse.c  ellipse.h  geo.h
src/libgencds/: CMakeLists.txt  array.c  avl-tree.c  gencds-Info.plist  hashtable-private.h  hashtable.c  hashtable.h  heap.c  heap.h  list-private.h  list.c  list.h  object-manager-private.h  object-manager.c  object-manager.h  object-manager2.c
src/macosx/: res-manager.c
src/math/: CMakeLists.txt  constants.h  convert.h  linalg.c  linalg.h  quaternions.c  quaternions.h  types.h
src/parsers/: 3ds.c  3ds.h  CMakeLists.txt  ac3d.c  ac3d.h  cmod.c  cmod.h  collada.c  collada.h  hrml.c  hrml.h  hrml3d.c  hrml3d.h  image.c  jpg.c  jpg.h  model.c  model.h  png.c  png.h  pngfile.c  tga.c  tga.h
src/physics/: CMakeLists.txt  areodynamics.c  areodynamics.h  barneshut.h  celestial-object.c  celestial-object.h  collision.c  collision.h  dynamics.c  dynamics.h  mass.c  mass.h  object.c  object.h  octtree.c  octtree.h  orbit.c  orbit.h  particles.c  particles.h  physics.h  reftypes.h  rockets.c  sectors.c  world.c  world.h
src/platform/macosx/: MainMenu.xib  OOAppDelegate.h  OOAppDelegate.m  OOOpenGLView.h  OOOpenGLView.m  cgbitmaps.c  hid.m  menu-manager.m  mouse.c  osx-main.m  res-manager.c  res-manager.h
src/platform/posix/: res-manager.c
src/platform/sdl/: sdl-events.c  sdl-events.h  sdl-main.c  sdl-mouse.c  sdl-window.c  sdl-window.h
src/platform/win/: res-manager.c
src/plugins/: CMakeLists.txt
src/plugins/example/: CMakeLists.txt  example-plugin.c
src/rendering/: 3ds.c  3ds.h  ac3d.c  ac3d.h  camera.c  camera.h  cmod.c  cmod.h  collada.c  collada.h  colour.c  colour.h  drawable.c  drawable.h  gl3drawable.c  gl3drawable.h  gltf.c  gltf.h  gui.c  gui.h  light.c  light.h  location.c  location.h  material.c  material.h  model.c  model.h  object.c  object.h  overlay.c  overlay.h  particles.c  particles.h  planet.c  planet.h  reftypes.h  render-info.c  render-info.h  render.c  (+23 more)
src/rendering/shaders/fixed/: fixed.fragment  fixed.vertex
src/rendering/shaders/flat/: flat.fragment  flat.vertex
src/rendering/shaders/overlay/: overlay.fragment  overlay.vertex
src/rendering/shaders/planet/: planet.fragment  planet.vertex
src/rendering/shaders/shared/: shader-types.glsl
src/rendering/shaders/sky/: sky.fragment
src/rendering/shaders/spacecraft/: spacecraft.fragment  spacecraft.vertex
src/rendering/shaders/star/: star.fragment  star.vertex
src/rendering/ui/: console.c  console.h  menus.c  menus.h
src/scripting/: CMakeLists.txt  config.pyx  environment.pxd  environment.pyx  io.pyx  object-manager.pyx  ode.pxd  ode.pyx  ooscript.pyx  orbits.pxd  orbits.pyx  plugin.pyx  res.pyx  scripting.c  scripting.h  sg.pxd  sg.pyx  sim.pyx  texture.pxd  texture.pyx
src/scripting/openorbit/: __init__.py  config.i  event.i
src/sim/: actuator.c  actuator.h  battery.c  battery.h  class.c  class.h  engine.c  engine.h  haps.c  haps.h  propellant-tank.c  propellant-tank.h  pubsub.c  pubsub.h  simenvironment.c  simenvironment.h  simevent.c  simevent.h  simtime.c  simtime.h  simtypes.h  spacecraft-control.c  spacecraft-control.h  spacecraft.c  spacecraft.h  world-loader.c  world-loader.h
src/sim/mfd/: mfd.c  mfd.h
src/sim/spacecraft/apollo/: apollo.c
src/sim/spacecraft/gemeni/: gemeni.c
src/sim/spacecraft/mercury/: mercury.c
src/utils/: bitutils.h
src/vessel/: control.c
src/vmath/: CMakeLists.txt  vmath-constants.h  vmath-convert.h  vmath-integer.h  vmath-matvec.c  vmath-matvec.h  vmath-matvec.inl  vmath-quaternions.c  vmath-quaternions.h  vmath-quaternions.inl  vmath-types.h  vmath.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  testdriver-main.c
tests/t000_hashtable/: CMakeLists.txt  hash-test.c
tests/t001_heap/: CMakeLists.txt  heap-test.c
tests/t002_tga/: CMakeLists.txt  rle.tga  tga-test.c  uncomp.tga
tests/t003_math/: CMakeLists.txt  math-test.c
tests/t004_physics/: CMakeLists.txt  PhysicsTest.h  PhysicsTest.m  test-case.c
tests/t005_object_manager/: CMakeLists.txt  om-test.c
tests/t006_list/: CMakeLists.txt  list-test.c
tests/t007_object_manager2/: CMakeLists.txt  om2-test.c
tests/t008_hrml/: CMakeLists.txt  hrml-test.c  valid.hrml
tests/t009_pubsub/: test-pubsub.c
tests/t010_avltree/: test-avltree.c
tests/template/: CMakeLists.txt  test-case.c
tests/test_2.0/: test-palloc.c
tools/: CMakeLists.txt  README.rst
tools/autowrap/: CMakeLists.txt  Makefile  README.rst  autowrap.cc  prep.hh  scriptlang.cc  scriptlang.hh
(+43 files in other folders)
