include_directories(${CHECK_INCLUDES})
add_subdirectory(common)

include_directories(common ${CMAKE_SOURCE_DIR}/src)
link_libraries(testMain ${CHECK_LIB})
add_subdirectory(t000_hashtable)
add_subdirectory(t001_heap)
add_subdirectory(t002_tga)
add_subdirectory(t004_physics)
add_subdirectory(t005_object_manager)
add_subdirectory(t006_list)
add_subdirectory(t007_object_manager2)
add_subdirectory(t008_hrml)
