# Build instructions for the Generic C Data Structure Library

set(gencds_SRC hashtable.c heap.c list.c object-manager.c object-manager2.c)
#set(gencds_FILES
#    hashtable.h heap.h list.h object-manager.h
#    CMakeLists.txt)

#add_cmake_list()

#add_library(gencds STATIC ${gencds_SRC})# ${gencds_FILES})


#install(TARGETS gencds
#        ARCHIVE DESTINATION lib)
